--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,6 @@ script:
 
 after_success:
   - coveralls
+
+  # after_build:
+  - codeclimate-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
